--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/theme.scss",
               "src/styles.css"
             ],
             "scripts": []
