--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "angular-bootstrap-md": "^8.10.1",
     "angular-google-charts": "^0.1.6",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "hammerjs": "^2.0.8",
+    "ng2-charts": "^2.3.0",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
