--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chart.js": "^2.9.3",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^2.3.0",
+    "ngx-image-cropper": "^3.1.4",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
