--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ng2-charts": "^2.3.0",
     "ngx-image-cropper": "^3.1.4",
     "ngx-pagination": "^5.0.0",
+    "ngx-spinner": "^9.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
