--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@babel/compat-data": "^7.8.0",
     "angular-bootstrap-md": "^8.10.1",
     "angular-google-charts": "^0.1.6",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "hammerjs": "^2.0.8",
+    "libphonenumber-js": "^1.7.49",
     "ng2-charts": "^2.3.0",
+    "ngx-google-places-autocomplete": "^2.0.4",
     "ngx-image-cropper": "^3.1.4",
+    "ngx-mat-intl-tel-input": "^2.0.5",
     "ngx-pagination": "^5.0.0",
     "ngx-spinner": "^9.0.1",
     "rxjs": "~6.4.0",
