--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ngx-spinner": "^9.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "xlsx": "^0.15.6",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
